--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
 <h1>Pages#about</h1>
 <p>Find me in app/views/pages/about.html.erb</p>
 
-<%= link_to 'Home', pages_homepage_path %>
+<%= link_to 'Home', root_path %>
