--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,7 @@
 <h1 align="center">Sign up for Alpha Blog </h1>
  
+ <%= render 'shared/errors', obj: @user %>
+
 <div class="row">
   <div class="col-xs-12">
     <%= form_for @user, html: { class: 'form-horizontal', role: 'form'} do |f|%>
