--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -29,6 +29,19 @@
             </ul>
           </li>
         <% end %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to 'All categories', categories_path %></li>
+            <% Category.all.each do |category| %>
+              <li><%= link_to "#{category.name}", category_path(category)%></li>
+            <% end %>
+            <% if logged_in? && current_user.admin? %>
+              <li role="separator" class="divider"></li>
+              <li><%= link_to 'Create new category', new_category_path %></li>
+            <% end %>
+          </ul>
+        </li>
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
@@ -37,20 +50,20 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-      <% if logged_in? %>
-        <li><%= link_to "Log out", logout_path, method: :delete %></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-           Your Profile <%= "Admin" if current_user.admin? %><span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu">
-            <li><%= link_to 'Edit your profile', edit_user_path(current_user)%></li>
-            <li><%= link_to 'View your profile', user_path(current_user) %></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
+        <% if logged_in? %>
+          <li><%= link_to "Log out", logout_path, method: :delete %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              Your Profile <%= "Admin" if current_user.admin? %><span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to 'Edit your profile', edit_user_path(current_user)%></li>
+              <li><%= link_to 'View your profile', user_path(current_user) %></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+            </ul>
+          </li>
         <% else %>
           <li><%= link_to "Log in", login_path %></li>
           <li><%= link_to "Sign up", signup_path %></li>
